[tool.poetry]
name = "blaise_dds"
version = "0.1.0"
package-mode = true

[tool.poetry.dependencies]
python = "^3.13"
google-auth = "^2.40.3"
requests = "^2.32.5"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
black = "^25.1.0"
isort = "^6.0.1"
coverage = "^7.10.4"
flake8-cognitive-complexity = "^0.1.0"
pytest = "^8.4.1"
responses = "^0.25.8"

[tool.isort]
multi_line_output = "3"
include_trailing_comma = "True"
line_length = "88"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
